# viola

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: calib_fisheye.yaml  general_seg160x160.rapidproto  intelab.map
example/: CMakeLists.txt  demo_debug_draw.cpp  demo_feature.cpp  demo_gridmap.cpp  demo_gridmapping.cpp  demo_image_composition.cpp  demo_line_tracking.cpp  demo_stbimg.cpp  demo_tag_detect.cpp  demo_vio_data_loader.cpp  demo_vio_data_saver.cpp  test_g2o.cpp  test_imu.cpp  test_json.cpp  test_simple.cpp
gtest/: CMakeLists.txt  test_attitude_filter.cpp  test_basic.cpp  test_data.cpp  test_encrypt.cpp  test_geometry3d.cpp  test_kdtree.cpp  test_os.cpp  test_perf.cpp  test_tictoc.cpp  test_vio_data_saver.cpp
script/: doc_process.py  generate_gtest_code.py  generate_header_summary.py  install_opencv.sh
src/viola/: viola.h  vs_align.cpp  vs_align.h  vs_argparse.h  vs_basic.h  vs_calib.cpp  vs_calib.h  vs_cam_cap.h  vs_color_adjust.cpp  vs_color_adjust.h  vs_color_filter.cpp  vs_color_filter.h  vs_cv_convert.h  vs_cv_io.cpp  vs_cv_io.h  vs_data.h  vs_data_recorder.cpp  vs_data_recorder.h  vs_debug_draw.cpp  vs_debug_draw.h  vs_eigen_def.h  vs_eigen_io.h  vs_encrypt.cpp  vs_encrypt.h  vs_fbx.h  vs_feature.cpp  vs_feature.h  vs_feature_line.cpp  vs_feature_line.h  vs_g2o_solver.h  vs_geometry2d.h  vs_geometry3d.cpp  vs_geometry3d.h  vs_gridmap.h  vs_improc.cpp  vs_improc.h  vs_imsaver.h  vs_imtrans.cpp  vs_imtrans.h  vs_imu.cpp  (+51 more)
test/: demo_color_filter.cpp  demo_gridmapping.cpp  demo_image_transformer.cpp  demo_lane_detect.cpp  demo_panorama.cpp  demo_pf.cpp  demo_plot.cpp  demo_stbimg.cpp  demo_vio_data_loader.cpp  demo_viz3d.cpp  test_imu.cpp  test_simple.cpp
